No need to print about stopping if we're done anyway